c2prj1_cards/grade.txt
Grading at Mon Jul  1 09:36:15 UTC 2019
Compiling cards.c
cards.c:1:1: error: expected identifier or ‘(’ before ‘.’ token
 ../c2prj1_cards/card.c
 ^
Could not compile your card.c!

Overall Grade: FAILED
